<resources>
    <string name="app_name">SilkBoard2</string>
    <string name="welcome">Welcome to SilkBoard App</string>
    <string name="phone">Enter Your Phone Number *</string>
    <string name="otpenter">Enter the OTP </string>
    <string name="otpr">Enter the OTP Recived </string>
    <string name="otp">Genrate OTP</string>
    <string name="submit">Submit</string>
    <string name="firstName">Enter Your Full Name *</string>
    <string name="fatherName">Enter Your Fathers Name</string>
    <string name="landline">Land Line Number </string>
    <string name="address">Address *</string>
    <string name="doorNo">Door No *</string>
    <string name="area">Area *</string>
    <string name="taluka">Taluk *</string>
    <string name="district">District</string>
    <string name="next">Next</string>
    <string name="mulberry">Mulberry </string>
    <string name="tasar">Tasar</string>
    <string name="sector">Sector</string>
    <string name="oalk">Oalk Tasar</string>
    <string name="rear">Rearing Done in Seprate House</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="eri">Eri</string>
    <string name="muga">Muga</string>
    <string name="appType">Application Type</string>
    <string name="govt">Government</string>
    <string name="pvt">Private</string>
    <string name="ngo">NGO\'s</string>
    <string name="rearing">Rearing House </string>
    <string name="own">Own</string>
    <string name="leased">Leased</string>
    <string name="rented">Rented</string>
    <string name="hostPlant">Mulbery garden/host plant </string>
    <string name="hostPlant2">Mulbery /Host plant</string>
    <string name="acg">Acreage</string>
    <string name="var">Variety</string>
    <string name="capacity">Capacity of Rearing House (Number)</string>
    <string name="year">Year of Establishment </string>
    <string name="dd_no">DD Number</string>
    <string name="dd_date">DD Date</string>
    <string name="other">Other Details</string>
    <string name="race">Variety of pure silkworm race(Enter Race) </string>
    <string name="owner">Rearing House Ownership </string>
    <string name="rented2">Rented</string>
</resources>
