<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phoneNumber"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context=".PhoneNumber">


    <ImageView
        android:id="@+id/phone_number_logo"
        android:layout_width="218dp"
        android:layout_height="115dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/front"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/Left"
        app:layout_constraintTop_toTopOf="@+id/upGuide" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_logo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneText"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/Left"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <EditText
            android:id="@+id/loginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/phone"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"

            android:textColorHint="@color/colorPrimaryDark"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:background="@color/colorPrimaryDark"
        android:text="@string/otp"
        android:textColor="@color/background_material_light"
        app:layout_constraintBottom_toTopOf="@+id/downGuide"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toStartOf="@+id/Left" />

    <android.support.constraint.Guideline
        android:id="@+id/Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/upGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"  />
    <android.support.constraint.Guideline
        android:id="@+id/downGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"  />



</android.support.constraint.ConstraintLayout>